--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "body-parser": "1.8.1",
     "debug": "2.0.0",
     "express": "4.9.0",
-    "mongoose": "^3.8.17",
+    "express-validator": "2.6.0",
+    "mongoose": "3.8.17",
     "morgan": "1.3.0",
     "serve-favicon": "2.1.3"
   },
