--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "express": "4.9.0",
     "express-validator": "2.6.0",
     "mongoose": "3.8.17",
-    "morgan": "1.3.0",
     "serve-favicon": "2.1.3"
   },
   "devDependencies": {
@@ -30,8 +29,7 @@
     "karma-sinon-chai": "0.2.0",
     "mocha": "1.21.5",
     "sinon": "1.10.3",
-    "sinon-chai": "2.6.0",
-    "supertest": "0.14.0"
+    "sinon-chai": "2.6.0"
   },
   "engine": "node >= 0.10.32"
 }
