--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "4.9.0",
     "express-validator": "2.6.0",
     "mongoose": "3.8.17",
-    "serve-favicon": "2.1.3"
+    "morgan": "1.4.1",
+    "serve-favicon": "2.1.3",
+    "winston": "0.8.1"
   },
   "devDependencies": {
     "chai": "1.9.2",
