Modified project settings

--- a/project.config
+++ b/project.config
@@ -21,3 +21,6 @@
 	push = +force group user/Charles-François Caron (charlescaron)
 	pushTag = group user/Charles-François Caron (charlescaron)
 	pushSignedTag = group user/Charles-François Caron (charlescaron)
+[submit]
+	action = fast forward only
+	mergeContent = false
