--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "4.12.4",
     "express-validator": "2.10.0",
     "mongoose": "4.0.3",
+    "mongoose-auto-increment": "4.0.0",
     "morgan": "1.5.3",
     "serve-favicon": "2.2.1",
     "winston": "1.0.0"
